[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Options.tscn" type="PackedScene" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Silver.ttf"

[sub_resource type="DynamicFont" id=2]
size = 55
extra_spacing_bottom = -15
font_data = SubResource( 1 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.00392157, 0.192157, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 249.0
margin_top = 156.0
margin_right = 751.0
margin_bottom = 343.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 502.0
margin_bottom = 97.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
text = "Potion Seller
A game for the Cultivation Jam"
align = 1
valign = 1

[node name="StartBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 101.0
margin_right = 502.0
margin_bottom = 127.0
text = "Start Game"

[node name="OptionsBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 502.0
margin_bottom = 157.0
text = "Options"

[node name="CreditsBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 161.0
margin_right = 502.0
margin_bottom = 187.0
text = "Credits"

[node name="Credits" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.00392157, 0.192157, 1 )

[node name="CenterContainer" type="CenterContainer" parent="Credits"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/CenterContainer"]
margin_left = 197.0
margin_top = 87.0
margin_right = 802.0
margin_bottom = 413.0

[node name="Label" type="Label" parent="Credits/CenterContainer/VBoxContainer"]
margin_right = 605.0
margin_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
text = "Programming: Lenny Morayniss ldmoray.itch.io
Art: Mike Starrow
Additional Art: Kenney.nl
SFX: Lenny Morayniss
Background Music: Ludum Dare 28 - Track 6 by Abstraction, http://www.abstractionmusic.com/

Powered by:
Godot, godotengine.org
Dialogic, https://github.com/coppolaemilio/dialogic
godot-console, https://github.com/quentincaffeino/godot-console

Font:
Silver, https://poppyworks.itch.io/silver"

[node name="ExitCreditsBtn" type="Button" parent="Credits/CenterContainer/VBoxContainer"]
margin_top = 300.0
margin_right = 605.0
margin_bottom = 326.0
text = "Return to Screen"

[node name="Options" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="CenterContainer/VBoxContainer/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsBtn" to="." method="_on_OptionsBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CreditsBtn" to="." method="_on_CreditsBtn_pressed"]
[connection signal="pressed" from="Credits/CenterContainer/VBoxContainer/ExitCreditsBtn" to="." method="_on_ExitCreditsBtn_pressed"]
